Allows all new contacts to receive the welcome message and ensures they receive only one of the corresponding messages