@@ -22,6 +22,7 @@ public class MyService extends Service {
     Date today;
     List<Contact> dbContacts;
     Context context = this;
+    int received;
 
     public MyService() {
     }
@@ -66,199 +67,372 @@ public class MyService extends Service {
                         long diffInMs = today.getTime() - dobDate.getTime();
                         int diff = (int) diffInMs / (1000 * 60 * 60 * 24);
                         //Toast.makeText(cont, "Diff is " + diff, Toast.LENGTH_SHORT).show();
+                        received = cn.getContactreceived();
+                        String lang = cn.getContactlanguage();
 
-                        // Message at birth
-                        if(diff == 0) {
-                            String smsBody = URLEncoder.encode("Welcome message + ORS formula", "UTF-8");
-
-                            /*String SMS_SENT = "SMS_SENT";
-                            String SMS_DELIVERED = "SMS_DELIVERED";
-
-                            PendingIntent sentPendingIntent = PendingIntent.getBroadcast(cont, 0, new Intent(SMS_SENT), 0);
-                            PendingIntent deliveredPendingIntent = PendingIntent.getBroadcast(cont, 0, new Intent(SMS_DELIVERED), 0);
-
-                            // When SMS has been sent
-                            cont.registerReceiver(new BroadcastReceiver() {
-                                @Override
-                                public void onReceive(Context cont, Intent intent) {
-                                    switch (getResultCode()) {
-                                        case Activity.RESULT_OK:
-                                            Toast.makeText(cont, "SMS sent successfully to " + phone, Toast.LENGTH_SHORT).show();
-                                            break;
-
-                                        case SmsManager.RESULT_ERROR_GENERIC_FAILURE:
-                                            Toast.makeText(cont, "Generic failure cause", Toast.LENGTH_SHORT).show();
-                                            break;
-                                        case SmsManager.RESULT_ERROR_NO_SERVICE:
-                                            Toast.makeText(cont, "Service is currently unavailable", Toast.LENGTH_SHORT).show();
-                                            break;
-                                        case SmsManager.RESULT_ERROR_NULL_PDU:
-                                            Toast.makeText(cont, "No pdu provided", Toast.LENGTH_SHORT).show();
-                                            break;
-                                        case SmsManager.RESULT_ERROR_RADIO_OFF:
-                                            Toast.makeText(cont, "Radio was explicitly turned off", Toast.LENGTH_SHORT).show();
-                                            break;
-                                    }
+                        // Welcome message
+                        if(diff < 366) {
+                            if (received == 0) {
+                                String smsBody;
+                                if (lang == "English") {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.welcome_msg_en), "UTF-8");
                                 }
-                            }, new IntentFilter(SMS_SENT));
-
-                            // When SMS has been delivered
-                            cont.registerReceiver(new BroadcastReceiver() {
-                                @Override
-                                public void onReceive(Context cont, Intent intent) {
-                                    switch (getResultCode()) {
-                                        case Activity.RESULT_OK:
-                                            Toast.makeText(cont, "SMS delivered", Toast.LENGTH_SHORT).show();
-                                            break;
-                                        case Activity.RESULT_CANCELED:
-                                            Toast.makeText(cont, "SMS not delivered", Toast.LENGTH_SHORT).show();
-                                            break;
-                                    }
+                                else {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.welcome_msg_fr), "UTF-8");
                                 }
-                            }, new IntentFilter(SMS_DELIVERED));
 
-                            // Get default instance of SmsManager
-                            SmsManager smsManager = SmsManager.getDefault();
+                                Toast.makeText(cont, getResources().getString(R.string.welcome_msg_en), Toast.LENGTH_LONG).show();
 
-                            // Send a text-based SMS
-                            //smsManager.sendTextMessage(phone, null, smsBody, sentPendingIntent, deliveredPendingIntent);*/
-                            Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
-                            url += phone + "&msg=" + smsBody;
-                            //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
-                            URL url1 = new URL(url);
-                            /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
-                                    url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
-                            url1 = uri.toURL();*/
-                            MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
-                            messageApiCaller.execute(url1);
+                                // Send a text-based SMS
+                                Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
+                                url += phone + "&msg=" + smsBody;
+                                //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
+                                URL url1 = new URL(url);
+                                /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
+                                        url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
+                                url1 = uri.toURL();*/
+                                MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
+                                messageApiCaller.execute(url1);
+
+                                // Increment received messages count
+                                if (diff < 21) {
+                                    received = 1;
+                                }
+                                else if (diff >= 21 && diff < 40) {
+                                    received = 2;
+                                }
+                                else if (diff >= 40 && diff < 70) {
+                                    received = 3;
+                                }
+                                else if (diff >= 70 && diff < 96) {
+                                    received = 4;
+                                }
+                                else if (diff >= 96 && diff < 270) {
+                                    received = 5;
+                                }
+                                else if (diff >= 270 && diff < 365) {
+                                    received = 6;
+                                }
+                                else if (diff == 365) {
+                                    received = 7;
+                                }
+                                else if (diff == 366) {
+                                    received = 8;
+                                }
+
+                                // Update current contact
+                                dbHandler.deleteContact(phone);
+                                Contact contact = new Contact(phone, dob, lang, received);
+                                dbHandler.addContact(contact);
+                            }
+                            // If contact receives no message
+                            else {
+                                Toast.makeText(cont, "Skipping...", Toast.LENGTH_SHORT).show();
+                            }
                         }
 
                         // Week one message
-                        else if(diff == 7) {
-                            String smsBody = URLEncoder.encode("Week one message", "UTF-8");
+                        if(diff >= 7 && diff < 21) {
+                            if(received == 1) {
+                                String smsBody;
+                                if (lang == "English") {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg2_en), "UTF-8");
+                                }
+                                else {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg2_fr), "UTF-8");
+                                }
 
-                            // Send a text-based SMS
-                            Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
-                            url += phone + "&msg=" + smsBody;
-                            //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
-                            URL url1 = new URL(url);
-                            /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
-                                    url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
-                            url1 = uri.toURL();*/
-                            MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
-                            messageApiCaller.execute(url1);
+                                Toast.makeText(cont, getResources().getString(R.string.msg2_en), Toast.LENGTH_LONG).show();
+
+                                // Send a text-based SMS
+                                Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
+                                url += phone + "&msg=" + smsBody;
+                                //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
+                                URL url1 = new URL(url);
+                                /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
+                                        url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
+                                url1 = uri.toURL();*/
+                                MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
+                                messageApiCaller.execute(url1);
+
+                                // Increment received messages count
+                                received++;
+
+                                // Update current contact
+                                dbHandler.deleteContact(phone);
+                                Contact contact = new Contact(phone, dob, lang, received);
+                                dbHandler.addContact(contact);
+                            }
+                            // If contact receives no message
+                            else {
+                                Toast.makeText(cont, "Skipping...", Toast.LENGTH_SHORT).show();
+                            }
                         }
 
                         // Week three message
-                        else if(diff == 21) {
-                            String smsBody = URLEncoder.encode("Week three message", "UTF-8");
+                        else if(diff >= 21 && diff < 40) {
+                            if(received == 2) {
+                                String smsBody;
+                                if (lang == "English") {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg3_en), "UTF-8");
+                                }
+                                else {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg3_fr), "UTF-8");
+                                }
 
-                            // Send a text-based SMS
-                            Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
-                            url += phone + "&msg=" + smsBody;
-                            //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
-                            URL url1 = new URL(url);
-                            /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
-                                    url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
-                            url1 = uri.toURL();*/
-                            MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
-                            messageApiCaller.execute(url1);
+                                Toast.makeText(cont, getResources().getString(R.string.msg3_en), Toast.LENGTH_LONG).show();
+
+                                // Send a text-based SMS
+                                Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
+                                url += phone + "&msg=" + smsBody;
+                                //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
+                                URL url1 = new URL(url);
+                                /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
+                                        url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
+                                url1 = uri.toURL();*/
+                                MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
+                                messageApiCaller.execute(url1);
+
+                                // Increment received messages count
+                                received++;
+
+                                // Update current contact
+                                dbHandler.deleteContact(phone);
+                                Contact contact = new Contact(phone, dob, lang, received);
+                                dbHandler.addContact(contact);
+                            }
+                            // If contact receives no message
+                            else {
+                                Toast.makeText(cont, "Skipping...", Toast.LENGTH_SHORT).show();
+                            }
                         }
 
                         // Week six message
-                        else if(diff == 40) {
-                            String smsBody = URLEncoder.encode("Week six message", "UTF-8");
+                        else if(diff >= 40 && diff < 70) {
+                            if(received == 3) {
+                                String smsBody;
+                                if (lang == "English") {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg4_en), "UTF-8");
+                                }
+                                else {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg4_fr), "UTF-8");
+                                }
 
-                            // Send a text-based SMS
-                            Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
-                            url += phone + "&msg=" + smsBody;
-                            //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
-                            URL url1 = new URL(url);
-                            /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
-                                    url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
-                            url1 = uri.toURL();*/
-                            MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
-                            messageApiCaller.execute(url1);
+                                Toast.makeText(cont, getResources().getString(R.string.msg4_en), Toast.LENGTH_LONG).show();
+
+                                // Send a text-based SMS
+                                Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
+                                url += phone + "&msg=" + smsBody;
+                                //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
+                                URL url1 = new URL(url);
+                                /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
+                                        url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
+                                url1 = uri.toURL();*/
+                                MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
+                                messageApiCaller.execute(url1);
+
+                                // Increment received messages count
+                                received++;
+
+                                // Update current contact
+                                dbHandler.deleteContact(phone);
+                                Contact contact = new Contact(phone, dob, lang, received);
+                                dbHandler.addContact(contact);
+                            }
+                            // If contact receives no message
+                            else {
+                                Toast.makeText(cont, "Skipping...", Toast.LENGTH_SHORT).show();
+                            }
                         }
 
                         // Week ten message
-                        else if(diff == 70) {
-                            String smsBody = URLEncoder.encode("Week ten message", "UTF-8");
+                        else if(diff >= 70 && diff < 96) {
+                            if(received == 4) {
+                                String smsBody;
+                                if (lang == "English") {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg5_en), "UTF-8");
+                                }
+                                else {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg5_fr), "UTF-8");
+                                }
 
-                            // Send a text-based SMS
-                            Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
-                            url += phone + "&msg=" + smsBody;
-                            //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
-                            URL url1 = new URL(url);
-                            /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
-                                    url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
-                            url1 = uri.toURL();*/
-                            MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
-                            messageApiCaller.execute(url1);
+                                Toast.makeText(cont, getResources().getString(R.string.msg5_en), Toast.LENGTH_LONG).show();
+
+                                // Send a text-based SMS
+                                Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
+                                url += phone + "&msg=" + smsBody;
+                                //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
+                                URL url1 = new URL(url);
+                                /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
+                                        url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
+                                url1 = uri.toURL();*/
+                                MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
+                                messageApiCaller.execute(url1);
+
+                                // Increment received messages count
+                                received++;
+
+                                // Update current contact
+                                dbHandler.deleteContact(phone);
+                                Contact contact = new Contact(phone, dob, lang, received);
+                                dbHandler.addContact(contact);
+                            }
+                            // If contact receives no message
+                            else {
+                                Toast.makeText(cont, "Skipping...", Toast.LENGTH_SHORT).show();
+                            }
                         }
 
                         // Week fourteen message
-                        else if(diff == 96) {
-                            String smsBody = URLEncoder.encode("Week fourteen message", "UTF-8");
+                        else if(diff >= 96 && diff < 270) {
+                            if(received == 5) {
+                                String smsBody;
+                                if (lang == "English") {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg6_en), "UTF-8");
+                                }
+                                else {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg6_fr), "UTF-8");
+                                }
 
-                            // Send a text-based SMS
-                            Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
-                            url += phone + "&msg=" + smsBody;
-                            //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
-                            URL url1 = new URL(url);
-                            /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
-                                    url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
-                            url1 = uri.toURL();*/
-                            MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
-                            messageApiCaller.execute(url1);
+                                Toast.makeText(cont, getResources().getString(R.string.msg6_en), Toast.LENGTH_LONG).show();
+
+                                // Send a text-based SMS
+                                Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
+                                url += phone + "&msg=" + smsBody;
+                                //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
+                                URL url1 = new URL(url);
+                                /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
+                                        url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
+                                url1 = uri.toURL();*/
+                                MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
+                                messageApiCaller.execute(url1);
+
+                                // Increment received messages count
+                                received++;
+
+                                // Update current contact
+                                dbHandler.deleteContact(phone);
+                                Contact contact = new Contact(phone, dob, lang, received);
+                                dbHandler.addContact(contact);
+                            }
+                            // If contact receives no message
+                            else {
+                                Toast.makeText(cont, "Skipping...", Toast.LENGTH_SHORT).show();
+                            }
                         }
 
                         // Month nine message
-                        else if(diff == 270) {
-                            String smsBody = URLEncoder.encode("Month nine message", "UTF-8");
+                        else if(diff >= 270 && diff < 365) {
+                            if(received == 6) {
+                                String smsBody;
+                                if (lang == "English") {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg7_en), "UTF-8");
+                                }
+                                else {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg7_fr), "UTF-8");
+                                }
 
-                            // Send a text-based SMS
-                            Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
-                            url += phone + "&msg=" + smsBody;
-                            //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
-                            URL url1 = new URL(url);
-                            /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
-                                    url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
-                            url1 = uri.toURL();*/
-                            MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
-                            messageApiCaller.execute(url1);
+                                Toast.makeText(cont, getResources().getString(R.string.msg7_en), Toast.LENGTH_LONG).show();
+
+                                // Send a text-based SMS
+                                Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
+                                url += phone + "&msg=" + smsBody;
+                                //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
+                                URL url1 = new URL(url);
+                                /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
+                                        url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
+                                url1 = uri.toURL();*/
+                                MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
+                                messageApiCaller.execute(url1);
+
+                                // Increment received messages count
+                                received++;
+
+                                // Update current contact
+                                dbHandler.deleteContact(phone);
+                                Contact contact = new Contact(phone, dob, lang, received);
+                                dbHandler.addContact(contact);
+                            }
+                            // If contact receives no message
+                            else {
+                                Toast.makeText(cont, "Skipping...", Toast.LENGTH_SHORT).show();
+                            }
                         }
 
                         // Year one message
                         else if(diff == 365) {
-                            String smsBody = URLEncoder.encode("Year one message", "UTF-8");
+                            if(received == 7) {
+                                String smsBody;
+                                if (lang == "English") {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg8_en), "UTF-8");
+                                }
+                                else {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg8_fr), "UTF-8");
+                                }
 
-                            // Send a text-based SMS
-                            Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
-                            url += phone + "&msg=" + smsBody;
-                            //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
-                            URL url1 = new URL(url);
-                            /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
-                                    url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
-                            url1 = uri.toURL();*/
-                            MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
-                            messageApiCaller.execute(url1);
+                                Toast.makeText(cont, getResources().getString(R.string.msg8_en), Toast.LENGTH_LONG).show();
+
+                                // Send a text-based SMS
+                                Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
+                                url += phone + "&msg=" + smsBody;
+                                //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
+                                URL url1 = new URL(url);
+                                /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
+                                        url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
+                                url1 = uri.toURL();*/
+                                MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
+                                messageApiCaller.execute(url1);
+
+                                // Increment received messages count
+                                received++;
+
+                                // Update current contact
+                                dbHandler.deleteContact(phone);
+                                Contact contact = new Contact(phone, dob, lang, received);
+                                dbHandler.addContact(contact);
+                            }
+                            // If contact receives no message
+                            else {
+                                Toast.makeText(cont, "Skipping...", Toast.LENGTH_SHORT).show();
+                            }
                         }
 
                         // Conclusion message
                         else if(diff == 366) {
-                            String smsBody = URLEncoder.encode("Conclusion message", "UTF-8");
+                            if(received == 8) {
+                                String smsBody;
+                                if (lang == "English") {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg9_en), "UTF-8");
+                                }
+                                else {
+                                    smsBody = URLEncoder.encode(getResources().getString(R.string.msg9_fr), "UTF-8");
+                                }
 
-                            // Send a text-based SMS
-                            Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
-                            url += phone + "&msg=" + smsBody;
-                            //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
-                            URL url1 = new URL(url);
-                            /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
-                                    url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
-                            url1 = uri.toURL();*/
-                            MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
-                            messageApiCaller.execute(url1);
+                                Toast.makeText(cont, getResources().getString(R.string.msg9_en), Toast.LENGTH_LONG).show();
+
+                                // Send a text-based SMS
+                                Toast.makeText(cont, "Preparing to call message api", Toast.LENGTH_SHORT).show();
+                                url += phone + "&msg=" + smsBody;
+                                //Toast.makeText(cont, "URL is " + url, Toast.LENGTH_LONG).show();
+                                URL url1 = new URL(url);
+                                /*URI uri = new URI(url1.getProtocol(), url1.getUserInfo(), url1.getHost(),
+                                        url1.getPort(), url1.getPath(), url1.getQuery(), url1.getRef());
+                                url1 = uri.toURL();*/
+                                MessageApiCaller messageApiCaller = new MessageApiCaller(cont);
+                                messageApiCaller.execute(url1);
+
+                                // Increment received messages count
+                                received++;
+
+                                // Update current contact
+                                dbHandler.deleteContact(phone);
+                                Contact contact = new Contact(phone, dob, lang, received);
+                                dbHandler.addContact(contact);
+                            }
+                            // If contact receives no message
+                            else {
+                                Toast.makeText(cont, "Skipping...", Toast.LENGTH_SHORT).show();
+                            }
                         }
 
                         // If contact receives no message
